--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "dusterio/lumen-passport": "^0.2.4",
         "barryvdh/laravel-cors": "^0.11.0",
         "illuminate/mail": "5.5.*",
-        "dingo/api": "^2.3"
+        "dingo/api": "^2.3",
+        "phpoffice/phpspreadsheet": "^1.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
