--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "barryvdh/laravel-cors": "^0.11.0",
         "illuminate/mail": "5.5.*",
         "dingo/api": "^2.3",
-        "phpoffice/phpspreadsheet": "^1.8"
+        "phpoffice/phpspreadsheet": "^1.8",
+        "symfony/var-dumper": "3.4.30"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
