--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "dingo/api": "^2.3",
         "phpoffice/phpspreadsheet": "^1.8",
         "symfony/var-dumper": "3.4.30",
-        "tymon/jwt-auth": "1.0.0-rc.3"
+        "tymon/jwt-auth": "1.0.0-rc.3",
+        "ixudra/curl": "6.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
